[package]
name = "number_game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
rand = "0.8.4"
crossterm = "0.22.1"
crossbeam = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
